@@ -8,6 +8,9 @@ copyright_holder = Randy Stauner
 copyright_year = 2011
 license = Perl_5
 
+; NOTE: To test this module on its own README:
+; $ DZIL_README_PHASE=build dzil build
+
 [@Author::RWSTAUNER]
 ; This seems broken (https://rt.cpan.org/Public/Bug/Display.html?id=73280)
 -remove = Test::Pod::LinkCheck
@@ -20,6 +23,9 @@ Test::EOL.trailing_whitespace = 0
 [Encoding / CP1252]
 match    = corpus/lit-cp1252
 encoding = cp1252
+
+[Prereqs / RuntimeRequires]
+URI::Escape = 0
 
 [Prereqs / RuntimeRecommends]
 HTML::Entities = 0
